[package]

name = "rustyhex"
version = "0.0.3"
authors = [ "dpc@ucore.info" ]

[[bin]]
name = "rustyhex"
path = "src/main.rs"


[dependencies.piston]
git = "https://github.com/pistondevelopers/piston/"

[dependencies.hgl]
git = "https://github.com/cmr/hgl-rs/"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.sdl2_game_window]
git = "https://github.com/PistonDevelopers/sdl2_game_window"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.hex2d]
git = "https://github.com/dpc/hex2d-rs"
